--- a/mediaquery.css
+++ b/mediaquery.css
@@ -2,6 +2,10 @@
     .sidebar{
         display: none;
     }
+
+    .body_instagram {
+        padding-right: 0;
+    }
 }
 
 @media (max-width: 614px){
