Aplica scrool nos stories
* Foi criado uma nova div dentro da div .stories
* scondeu o scroll da classe pai
* mostrou o scroll x e escondeu o scroll y da div filha

--- a/mediaquery.css
+++ b/mediaquery.css
@@ -6,6 +6,10 @@
     .body_instagram {
         padding-right: 0;
     }
+
+    .stories button {
+        display: none;
+    }
 }
 
 @media (max-width: 614px){
