--- a/estilo.css
+++ b/estilo.css
@@ -125,7 +125,31 @@ ion-icon {
 
     border: 1px solid #DBDBDB;
     border-radius: 3px;
-    background-color: #fff;
+
+    position: relative;
+}
+
+.stories .internal {
+    display: flex;
+    height: 66px;
+
+    margin-right: -50px;
+    margin-bottom: -50px;
+    padding-bottom: 50px;
+
+    overflow-y: hidden;
+    overflow-x: scroll;
+}
+
+.stories .gradient_border {    
+    min-width: 66px;
+    min-height: 66px;
+    margin-right: 14px;
+
+    /* circle border gradient */
+    background-image: linear-gradient(to right, #E88D49 0%, #C63D9C 100%);
+    border-radius: 100%;
+    text-align: center;
     position: relative;
 }
 
@@ -141,18 +165,6 @@ ion-icon {
     z-index: 1;
     right: 8px;
     top: 46px;
-}
-
-.stories .gradient_border {    
-    min-width: 66px;
-    min-height: 66px;
-
-    margin-right: 14px;
-    /* circle border gradient */
-    background-image: linear-gradient(to right, #E88D49 0%, #C63D9C 100%);
-    border-radius: 100%;
-    text-align: center;
-    position: relative;
 }
 
 
