--- a/estilo.css
+++ b/estilo.css
@@ -131,7 +131,6 @@ ion-icon:hover {
 
 .conteudo .stories {
     display: flex;
-    align-items: center;
     overflow: hidden;
 
     height: 118px;
@@ -144,7 +143,7 @@ ion-icon:hover {
 
 .stories .internal {
     display: flex;
-    height: 66px;
+    align-items: center;
 
     margin-right: -50px;
     margin-bottom: -50px;
@@ -155,14 +154,15 @@ ion-icon:hover {
     overflow-x: scroll;
 }
 
-.stories .gradient_border {    
+.stories .gradient_border {   
+    box-sizing: border-box; 
     min-width: 66px;
     min-height: 66px;
     margin-right: 14px;
 
     /* circle border gradient */
     background-image: linear-gradient(to right, #E88D49 0%, #C63D9C 100%);
-    border-radius: 100%;
+    border-radius: 50%;
     text-align: center;
     position: relative;
 }
@@ -170,7 +170,6 @@ ion-icon:hover {
 .stories ion-icon{
     width: 26px;
     height: 26px;
-    border-radius: 13px;
 
     color: #fff;
     filter:drop-shadow(0 5px 5px rgb(85, 85, 85));
@@ -188,24 +187,25 @@ ion-icon:hover {
 
 .gradient_border div {
     position: absolute;
-    top: calc((66px - (56px + 4px)) / 2);
-    left: calc((66px - (56px + 4px)) / 2);
+    top: calc((66px - (56px + 5px)) / 2);
+    left: calc((66px - (56px + 5px)) / 2);
 }
 
 .stories img {
     width: 56px;
     height: 56px;
 
-    padding: 2px;
-    border-radius: 30px;
+    padding: 2.5px;
+    border-radius: 50%;
 
     background-color: white;
 }
 
 .stories p {
-    margin: calc(66px + 7px) auto;
     font-size: 12px;
     text-align: center;
+
+    margin-top: 6px;
 }
 
 /* Posts */
