--- a/estilo.css
+++ b/estilo.css
@@ -33,7 +33,9 @@ ion-icon:hover {
 strong {
     font-size: 14px;
     font-weight: 500;
-    color: #262626;    
+    color: #262626;   
+
+    cursor: pointer; 
 }
 
 p {
@@ -41,6 +43,9 @@ p {
     font-size: 12px;
 }
 
+i {
+    cursor: pointer;
+}
 
 /* Barra superior */
 .bar_vest {
@@ -178,6 +183,31 @@ ion-icon:hover {
     position: relative;
 }
 
+.gradient_border div {
+    position: absolute;
+    top: calc((66px - (56px + 5px)) / 2);
+    left: calc((66px - (56px + 5px)) / 2);
+}
+
+.internal img {
+    width: 56px;
+    height: 56px;
+
+    padding: 2.5px;
+    border-radius: 50%;
+
+    background-color: white;
+
+    cursor: pointer;
+}
+
+.internal p {
+    font-size: 12px;
+    text-align: center;
+
+    margin-top: 6px;
+}
+
 .stories .btn_next{
     position: absolute;
     z-index: 1;
@@ -202,28 +232,6 @@ ion-icon:hover {
     color:#DBDBDB;
 }
 
-.gradient_border div {
-    position: absolute;
-    top: calc((66px - (56px + 5px)) / 2);
-    left: calc((66px - (56px + 5px)) / 2);
-}
-
-.internal img {
-    width: 56px;
-    height: 56px;
-
-    padding: 2.5px;
-    border-radius: 50%;
-
-    background-color: white;
-}
-
-.internal p {
-    font-size: 12px;
-    text-align: center;
-
-    margin-top: 6px;
-}
 
 /* Posts */
 
@@ -259,6 +267,10 @@ ion-icon:hover {
     width: 32px;
     height: 32px;
     margin-left: 17px;
+}
+
+.post video:download {
+
 }
 
 .post .sup p {
@@ -543,10 +555,17 @@ ion-icon:hover {
 
     margin-top: 18px;
     margin-left: 10px;
+
 }
 .sidebar li {
     list-style-type: disc;
     margin-right: 20px;
+
+    cursor: pointer;
+}
+
+.sidebar li:active {
+    color: #262626;
 }
 
 .sidebar > p:last-child {
